--- a/scb-ui-zk/src/main/webapp/pages/shared/prihlaska.zul
+++ b/scb-ui-zk/src/main/webapp/pages/shared/prihlaska.zul
@@ -501,6 +501,26 @@
 							</vlayout>
 						</hbox>
 						
+						<!-- Other attachments -->
+						<vbox hflex="1" sclass="form-grid"
+							if="${vm.otherFileConfigEnabled}"
+							style="margin-top: 25px; margin-bottom: 25px; margin-left: 10px;">
+							<label value="${c:l('txt.ui.common.OtherFilesToDownload')}" style="font-weight: bold;" />
+							<vlayout children="@load(vm.otherFileConfigList)" if="${vm.otherFileConfigEnabled}" >
+								<template name="children">
+									<vbox align="start" pack="center" >
+										<hbox align="center" style="margin-bottom: 10px;" >
+											<a iconSclass="z-icon-download" 
+												onClick="@command('downloadOtherAttachmentCmd', item=each)" />
+											<a label="@load(each.description)"
+												onClick="@command('downloadOtherAttachmentCmd', item=each)" />
+										</hbox>
+									</vbox>
+								</template>
+							</vlayout>
+							
+						</vbox>
+						
 						<!-- Captcha -->
 						<hlayout style="margin-bottom: 20px;margin-top: 10px;">
 							<vlayout apply="com.jzaoralek.scb.ui.common.recaptcha.RecaptchaComposer">
