--- a/scb-ui-zk/src/main/webapp/pages/common/component/login-mobile-info.zul
+++ b/scb-ui-zk/src/main/webapp/pages/common/component/login-mobile-info.zul
@@ -3,6 +3,6 @@
 	<div sclass="frame">
 		<a label="Sportologic" sclass="brand" href="/"/>
 		<label sclass="txt" value="Pokud ještě nemáte své přihlašovací údaje, zaregistrujte se pomocí vyplnění přihlášky."/>
-		<button label="Přihláška" href="/pages/public/prihlaska.zul" sclass="lpp"/>
+		<button label="Přihláška" href="/pages/public/prihlaska.zul" sclass="lpp" width="275px" />
 	</div>
 </div>
