--- a/scb-ui-zk/.settings/org.eclipse.wst.common.component
+++ b/scb-ui-zk/.settings/org.eclipse.wst.common.component
@@ -1,13 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
+        
     <wb-module deploy-name="scb-ui-zk">
+                
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
+                
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
+                
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
+                
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
         <dependent-module archiveName="scb-data-service-1.0-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/scb-data-service/scb-data-service">
             <dependency-type>uses</dependency-type>
         </dependent-module>
         <dependent-module archiveName="fio-client-1.0.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/fio-client/fio-client">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="sprt-model-1.0-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/sprt-model/sprt-model">
             <dependency-type>uses</dependency-type>
         </dependent-module>
         <dependent-module archiveName="ruian-client-1.0-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/ruian-client/ruian-client">
@@ -19,7 +27,11 @@
         <dependent-module archiveName="webtools-logging-1.0.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/webtools-logging/webtools-logging">
             <dependency-type>uses</dependency-type>
         </dependent-module>
+                
         <property name="context-root" value="scb-ui-zk"/>
+                
         <property name="java-output-path" value="/scb-ui-zk/target/classes"/>
+            
     </wb-module>
+    
 </project-modules>
