OneApp, redirect to web from ContextFiletr and links in login and footer

--- a/scb-ui-zk/src/main/webapp/pages/common/template/footer.zul
+++ b/scb-ui-zk/src/main/webapp/pages/common/template/footer.zul
@@ -1,5 +1,5 @@
 <div sclass="scb-footer">
-	<a href="https://sportologic.cz" style="text-decoration: none;" target="_blank">
+	<a href="https://sportologic.cz/web" style="text-decoration: none;" target="_blank">
 		<label value="S" sclass="app-logo"/>
 		<label value="Sportologic" sclass="app-name"/>	
 	</a>
