--- a/scb-ui-zk/src/main/webapp/pages/public/dashboard.zul
+++ b/scb-ui-zk/src/main/webapp/pages/public/dashboard.zul
@@ -15,7 +15,7 @@
 			<label value="${vm.welcomeInfo}" sclass="scb-headline-big"/>
 			
 			<button label="${c:l('txt.ui.common.courseApplication')}" 
-				href="/pages/public/prihlaska.zul"
+				href="${common:custCtxUri('/pages/public/prihlaska.zul')}"
 				iconSclass="z-icon-file-text"
 				visible="@load(vm.isCourseApplicationAllowed())"
 				style="margin-right: 10px; margin-top: 20px; font-weight: bold; min-height: 50px" />
