OneApp, keep customerCtx in url, access to secured page by unlogged user

--- a/scb-ui-zk/src/main/webapp/pages/public/zapomenute-heslo.zul
+++ b/scb-ui-zk/src/main/webapp/pages/public/zapomenute-heslo.zul
@@ -7,6 +7,10 @@
 <?xel-method prefix="common" name="getOrgNameStatic"
 	class="com.jzaoralek.scb.ui.common.vm.BaseVM"
 	signature="com.jzaoralek.scb.ui.common.vm.BaseVM getOrgNameStatic()"?>
+
+<?xel-method prefix="common" name="custCtxUri"
+     class="com.jzaoralek.scb.ui.common.utils.WebUtils"
+     signature="com.jzaoralek.scb.ui.common.utils.WebUtils buildCustCtxUri(java.lang.String)"?>
 	
 <?link rel="shortcut icon" type="image/x-icon" href="/favicon.ico"?>
 <?link rel="icon" type="image/x-icon" href="/favicon.ico"?>
