SprtAdmin, JPA query config, solution for uuid

--- a/sprt-admin/src/main/resources/web/hello.zul
+++ b/sprt-admin/src/main/resources/web/hello.zul
@@ -12,7 +12,8 @@
             </listhead>
             <template name="model">
                 <listitem>
-                    <listcell label="@bind(each.custName)"></listcell>
+                    <listcell label="@bind(each.custName)" />
+                    <listcell label="@load(each.uuid)" />
                 </listitem>
             </template>
         </listbox>
