SprtAdmin, load customer config and create database call procedure

--- a/sprt-admin/src/main/resources/web/hello.zul
+++ b/sprt-admin/src/main/resources/web/hello.zul
@@ -17,5 +17,9 @@
                 </listitem>
             </template>
         </listbox>
+
+        <textbox value="@bind(vm.custName)" />
+        <button label="Vytvořit" onClick="@command('createCustConfigCmd')" />
+
     </window>
 </zk>
