--- a/sprt-admin/src/main/resources/web/new-instance.zul
+++ b/sprt-admin/src/main/resources/web/new-instance.zul
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<?page title="${c:l('sprt.web.new-instance.title')}" contentType="text/html;charset=UTF-8" ?>
 <?taglib uri="http://www.zkoss.org/dsp/web/core" prefix="c"?>
 
 <zk>
@@ -7,43 +8,54 @@
             border="normal"
             viewModel="@id('vm') @init('com.sportologic.sprtadmin.vm.CustomerConfigVM')"
             validationMessages="@id('vmsgs')" >
-
+        <custom-attributes submitCmd="createCustConfigCmd" />
         <vlayout>
             <!-- Club info -->
             <label value="${c:l('sprt.web.new-instance.club.org.info')}" />
             <!-- Name -->
             <textbox id="custName"
-                     value="@bind(vm.custInitData.configOrgName) @save(vm.custInitData.configOrgName, before='createCustConfigCmd')  @validator(vm.uniqueCustomerValidator)"
+                     value="@bind(vm.custInitData.configOrgName) @save(vm.custInitData.configOrgName, before=submitCmd) @validator(vm.customerNameValidator)"
                      constraint="no empty"
                      placeholder="${c:l('sprt.web.new-instance.club.name')}" />
-            <label id="m1" sclass="hightlight" value="@bind(vmsgs[custName])"/>
+            <label value="@bind(vmsgs[custName])"/>
+
             <!-- Email -->
-            <textbox id="custOrgEmail" value="@bind(vm.custInitData.configOrgEmail)"
+            <textbox id="custOrgEmail" value="@bind(vm.custInitData.configOrgEmail) @save(vm.custInitData.configOrgEmail, before=submitCmd) @validator(vm.emailValidator, required=true)"
                      constraint="no empty"
                      placeholder="${c:l('sprt.web.new-instance.club.email')}" />
+            <label value="@bind(vmsgs[custOrgEmail])"/>
+
             <!-- Phone -->
-            <textbox id="custOrgPhone" value="@bind(vm.custInitData.configOrgPhone)"
+            <textbox id="custOrgPhone" value="@bind(vm.custInitData.configOrgPhone) @save(vm.custInitData.configOrgPhone, before=submitCmd) @validator(vm.notEmptyStringValidator)"
                      constraint="no empty"
                      placeholder="${c:l('sprt.web.new-instance.club.telefon')}" />
+            <label value="@bind(vmsgs[custOrgPhone])"/>
 
             <!-- Contact person -->
             <label value="${c:l('sprt.web.new-instance.contactperson')}" />
             <!-- Firstname-->
-            <textbox id="custContactFirstname" value="@bind(vm.custInitData.admContactFirstname)"
+            <textbox id="custContactFirstname" value="@bind(vm.custInitData.admContactFirstname) @save(vm.custInitData.admContactFirstname, before=submitCmd) @validator(vm.notEmptyStringValidator)"
                      constraint="no empty"
                      placeholder="${c:l('sprt.web.new-instance.contactperson.firstname')}" />
+            <label value="@bind(vmsgs[custContactFirstname])"/>
+
             <!-- Surname -->
-            <textbox id="custContactSurname" value="@bind(vm.custInitData.admContactSurname)"
+            <textbox id="custContactSurname" value="@bind(vm.custInitData.admContactSurname) @save(vm.custInitData.admContactSurname, before=submitCmd) @validator(vm.notEmptyStringValidator)"
                      constraint="no empty"
                      placeholder="${c:l('sprt.web.new-instance.contactperson.surname')}" />
+            <label value="@bind(vmsgs[custContactSurname])"/>
+
             <!-- Email -->
-            <textbox id="custContactEmail" value="@bind(vm.custInitData.admContactEmail)"
+            <textbox id="custContactEmail" value="@bind(vm.custInitData.admContactEmail) @save(vm.custInitData.admContactEmail, before=submitCmd) @validator(vm.emailValidator, required=true)"
                      constraint="no empty"
                      placeholder="${c:l('sprt.web.new-instance.contactperson.email')}" />
+            <label value="@bind(vmsgs[custContactEmail])"/>
+
             <!-- Phone -->
-            <textbox id="custContactPhone" value="@bind(vm.custInitData.admContactPhone)"
+            <textbox id="custContactPhone" value="@bind(vm.custInitData.admContactPhone) @save(vm.custInitData.admContactPhone, before=submitCmd) @validator(vm.notEmptyStringValidator)"
                      constraint="no empty"
                      placeholder="${c:l('sprt.web.new-instance.contactperson.phone')}" />
+            <label value="@bind(vmsgs[custContactPhone])"/>
 
             <button label="${c:l('sprt.web.new-instance.btn.create')}"
                     onClick="@command('createCustConfigCmd')" />
