--- a/sprt-admin-ui/src/app/cust-config-form/cust-config-form.component.html
+++ b/sprt-admin-ui/src/app/cust-config-form/cust-config-form.component.html
@@ -13,32 +13,38 @@
           class="form-control" 
           id="custName" 
           name="custName" 
+          maxlength="100"
           placeholder="Zadejte název klubu"
           required #custName="ngModel">
         </div>
-        <div [hidden]="!custName.pristine" class="alert alert-danger">Hodnota je povinná</div>
+        <div [hidden]="!custName.pristine" class="alert alert-danger">Hodnota je povinná!</div>
         <!-- Organization email -->
         <div class="form-group">
           <label for="custEmail">Emailová adresa</label>
           <input type="text" [(ngModel)]="custConfig.custEmail" 
             class="form-control" 
             id="custEmail" 
-            name="custEmail" 
+            name="custEmail"
+            maxlength="100"
             placeholder="Zadejte emailovou adresu klubu"
-            required #custEmail="ngModel">
+            email
+            required 
+            #custEmail="ngModel">
           </div>
-        <div [hidden]="!custEmail.pristine" class="alert alert-danger">Hodnota je povinná</div>
+        <div [hidden]="!custEmail.pristine" class="alert alert-danger">Hodnota je povinná!</div>
+        <div [hidden]="!custEmail.errors?.['email']" class="alert alert-danger">Neplatný formát emailu!</div>
         <!-- Admin firstname -->
         <div class="form-group">
           <label for="admFirstname">Jméno</label>
           <input type="text" [(ngModel)]="custConfig.admFirstname" 
             class="form-control" 
             id="admFirstname" 
-            name="admFirstname" 
+            name="admFirstname"
+            maxlength="48"
             placeholder="Zadejte jméno správce"
             required #admFirstname="ngModel">
           </div>
-        <div [hidden]="!admFirstname.pristine" class="alert alert-danger">Hodnota je povinná</div>
+        <div [hidden]="!admFirstname.pristine" class="alert alert-danger">Hodnota je povinná!</div>
         <!-- Admin surname -->
         <div class="form-group">
           <label for="admSurname">Příjmení</label>
@@ -46,10 +52,11 @@
             class="form-control" 
             id="admSurname" 
             name="admSurname" 
+            maxlength="50"
             placeholder="Zadejte příjmení správce"
             required #admSurname="ngModel">
           </div>
-        <div [hidden]="!admSurname.pristine" class="alert alert-danger">Hodnota je povinná</div>
+        <div [hidden]="!admSurname.pristine" class="alert alert-danger">Hodnota je povinná!</div>
         <!-- Admin email -->
         <div class="form-group">
           <label for="admEmail">Email</label>
@@ -57,10 +64,14 @@
             class="form-control" 
             id="admEmail" 
             name="admEmail" 
+            maxlength="100"
             placeholder="Zadejte emailovou adresu správce"
-            required #admEmail="ngModel">
+            required
+            email 
+            #admEmail="ngModel">
           </div>
-        <div [hidden]="!admEmail.pristine" class="alert alert-danger">Hodnota je povinná</div>
+        <div [hidden]="!admEmail.pristine" class="alert alert-danger">Hodnota je povinná!</div>
+        <div [hidden]="!admEmail.errors?.['email']" class="alert alert-danger">Neplatný formát emailu!</div>
         
         <button type="submit" [disabled]="!custConfigForm.form.valid" 
           class="btn btn-info">Vytvořit</button>
