SprtAdminUi - create instance form layout

--- a/sprt-admin-ui/src/app/app.component.html
+++ b/sprt-admin-ui/src/app/app.component.html
@@ -12,7 +12,18 @@
           </ul>
         </div>
       </div>
-      <router-outlet></router-outlet>
+      <main>
+        <router-outlet></router-outlet>
+
+      </main>
+      <footer class="my-5 pt-5 text-muted text-center text-small">
+        <p class="mb-1">&copy; Copyright Sportologic, s.r.o. 2019. Všechna práva vyhrazena</p>
+        <ul class="list-inline">
+          <li class="list-inline-item">
+            <a target="_blank" rel="noopener noreferrer" href="https://sportologic.cz/web/sportologic-vseobecne-podminky.pdf">Všeobecné podmínky</a>
+          </li>
+        </ul>
+      </footer>
     </div>
   </div>
 </div>
