--- a/sprt-admin-ui/src/app/cust-config-form/cust-config-form.component.html
+++ b/sprt-admin-ui/src/app/cust-config-form/cust-config-form.component.html
@@ -1,85 +1,96 @@
-<h2 class="text-center">Založení instance</h2>
-<p class="text-center" style="margin-top: 25px;margin-bottom: 25px;">
-  Níže prosíme o vyplnění základních údajů Vaší organizace, které jsou potřebné pro založení instance aplikace Sportologic.
-</p>
+<div class="py-5 text-center">
+  <h2>Vyzkoušejte zdarma</h2>
+  <p class="lead my-5">Založení vlastního prostředí systému Sportologic. Níže prosíme o základní údaje o organizaci a kontaktní osobě.</p>
+</div>
 
 <!-- Validation msg -->
 <div *ngIf="validMsgVisible" class="alert alert-warning" role="alert">
   {{ validMsg }}
 </div>
 
-<div class="card my-5">
-  <form (ngSubmit)="onSubmit()" #custConfigForm="ngForm">
-    <div class="card-body">
-        <!-- Organization name -->
-        <div class="form-group">
-          <label for="custName">Název</label>
-          <input type="text" [(ngModel)]="custConfig.custName" 
-          class="form-control" 
-          id="custName" 
-          name="custName" 
-          maxlength="100"
-          placeholder="Zadejte název klubu"
-          required #custName="ngModel">
-        </div>
-        <div [hidden]="!custName.pristine" class="alert alert-danger">Hodnota je povinná!</div>
-        <!-- Organization email -->
-        <div class="form-group">
-          <label for="custEmail">Emailová adresa</label>
-          <input type="text" [(ngModel)]="custConfig.custEmail" 
-            class="form-control" 
-            id="custEmail" 
-            name="custEmail"
-            maxlength="100"
-            placeholder="Zadejte emailovou adresu klubu"
-            email
-            required 
-            #custEmail="ngModel">
-          </div>
-        <div [hidden]="!custEmail.pristine" class="alert alert-danger">Hodnota je povinná!</div>
-        <div [hidden]="!custEmail.errors?.['email']" class="alert alert-danger">Neplatný formát emailu!</div>
-        <!-- Admin firstname -->
-        <div class="form-group">
-          <label for="admFirstname">Jméno</label>
-          <input type="text" [(ngModel)]="custConfig.admFirstname" 
-            class="form-control" 
-            id="admFirstname" 
-            name="admFirstname"
-            maxlength="48"
-            placeholder="Zadejte jméno správce"
-            required #admFirstname="ngModel">
-          </div>
+<form (ngSubmit)="onSubmit()" #custConfigForm="ngForm">
+  <h4 class="mb-3">Organizace</h4>
+  <!-- Organization name -->
+  <div class="form-floating mb-3 my-2">
+    <input type="text" [(ngModel)]="custConfig.custName"
+      class="form-control" 
+      placeholder="Název"    
+      id="custName" 
+      name="custName" 
+      maxlength="100"
+      equired #custName="ngModel">
+    <label for="custName">Název</label>
+    <div [hidden]="!custName.pristine" class="alert alert-danger">Hodnota je povinná!</div>
+  </div>
+  <!-- Organization email -->
+  <div class="form-floating mb-3 my-4">
+    <input type="email" [(ngModel)]="custConfig.custEmail" 
+      class="form-control" 
+      id="custEmail" 
+      name="custEmail"
+      maxlength="100"
+      placeholder="Emailová adresa"
+      email
+      required 
+      #custEmail="ngModel">
+    <label for="custEmail">Emailová adresa</label>
+    <div class="form-text">Zde budou zaslány podrobné informace o nastavení prostředí.</div>
+    <div [hidden]="!custEmail.pristine" class="alert alert-danger">Hodnota je povinná!</div>
+    <div [hidden]="!custEmail.errors?.['email']" class="alert alert-danger">Neplatný formát emailu!</div>
+  </div>
+
+  <h4 class="mb-2 my-5">Kontaktní osoba</h4>
+  <p class="form-text">Primární uživatel, kterému bude vytvořen přístup do aplikace.</p>
+  <div class="row mb-3">
+    <div class="col">
+      <!-- Admin firstname -->
+      <div class="form-floating mb-1 my-2">
+        <input type="text" [(ngModel)]="custConfig.admFirstname" 
+              class="form-control" 
+              id="admFirstname" 
+              name="admFirstname"
+              maxlength="48"
+              placeholder="Jméno"
+              required #admFirstname="ngModel">
+        <label for="admFirstname">Jméno</label>
         <div [hidden]="!admFirstname.pristine" class="alert alert-danger">Hodnota je povinná!</div>
-        <!-- Admin surname -->
-        <div class="form-group">
-          <label for="admSurname">Příjmení</label>
-          <input type="text" [(ngModel)]="custConfig.admSurname" 
-            class="form-control" 
-            id="admSurname" 
-            name="admSurname" 
-            maxlength="50"
-            placeholder="Zadejte příjmení správce"
-            required #admSurname="ngModel">
-          </div>
-        <div [hidden]="!admSurname.pristine" class="alert alert-danger">Hodnota je povinná!</div>
-        <!-- Admin email -->
-        <div class="form-group">
-          <label for="admEmail">Email</label>
-          <input type="text" [(ngModel)]="custConfig.admEmail" 
-            class="form-control" 
-            id="admEmail" 
-            name="admEmail" 
-            maxlength="100"
-            placeholder="Zadejte emailovou adresu správce"
-            required
-            email 
-            #admEmail="ngModel">
-          </div>
-        <div [hidden]="!admEmail.pristine" class="alert alert-danger">Hodnota je povinná!</div>
-        <div [hidden]="!admEmail.errors?.['email']" class="alert alert-danger">Neplatný formát emailu!</div>
-        
-        <button type="submit" [disabled]="!custConfigForm.form.valid" 
-          class="btn btn-info">Vytvořit</button>
+      </div>
     </div>
-  </form>
-</div>
+    <div class="col">
+      <div class="form-floating mb-1 my-2">
+        <!-- Admin surname -->
+        <input type="text" [(ngModel)]="custConfig.admSurname" 
+              class="form-control" 
+              id="admSurname" 
+              name="admSurname" 
+              maxlength="50"
+              placeholder="Příjmení"
+              required #admSurname="ngModel">
+        <label for="admSurname">Příjmení</label>
+        <div [hidden]="!admSurname.pristine" class="alert alert-danger">Hodnota je povinná!</div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Admin email -->
+  <div class="form-floating mb-3 my-4">
+    <input type="text" [(ngModel)]="custConfig.admEmail" 
+      class="form-control" 
+      id="admEmail" 
+      name="admEmail" 
+      maxlength="100"
+      placeholder="Emailová adresa"
+      required
+      email 
+      #admEmail="ngModel">
+    <label for="admEmail">Emailová adresa</label>
+    <div class="form-text" >Slouží pro uživatele, např. pro obnovu hesla apod.</div>
+    <div [hidden]="!admEmail.pristine" class="alert alert-danger">Hodnota je povinná!</div>
+    <div [hidden]="!admEmail.errors?.['email']" class="alert alert-danger">Neplatný formát emailu!</div>
+  </div>
+
+  <button type="submit" 
+    [disabled]="!custConfigForm.form.valid" 
+    class="w-100 btn btn-info btn-lg my-5">Založit</button>
+
+</form>
